cambios y modificaciones para que funcione